# TPagerMesh

./: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig_
main/: CMakeLists.txt  I2CDevice.hpp  button.h  encoder.c  font_montserrat_10_hun.c  font_montserrat_12_hun.c  fshelper.hpp  gps_processor.hpp  idf_component.yml  main.cpp  message_store.cpp  message_store.hpp  nmea_parser.c  nmea_parser.h  ui_events.hpp
main/app_ui/: app_main.hpp
main/drivers/: DRV2605.cpp  DRV2605.hpp  I2CDevice.cpp  I2CDevice.hpp  PowersBQ25896.tpp  XPowersCommon.tpp  XPowersLib.h  aw9364.c  aw9364.h  bq27220.cpp  bq27220.hpp  button.c  encoder.h  keypad_irq.cpp  keypad_irq.hpp  nmea_parser.h  st7796.cpp  st7796.hpp
main/ui_elements/: ui_widget.hpp
